--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
 
 	<small>
-		<div class="copyright">&copy;2009&thinsp;&ndash;&thinsp;2023 Lea Verou</div>
+		<div class="copyright">&copy;2009&ndash;2023 Lea Verou</div>
 		<div class="credits">Powered by <a href="https://11ty.dev/">Eleventy</a>, hosted by <a href="https://netlify.com">Netlify</span></div>
 		<a href="#" class="to-top">
 			<span class="long-text">To the top</span>
