Basic 🍔 and RWD utility classes

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Lea Verou</title>
-	<link rel="shortcut icon" href="/logo.svg" />
+	<link rel="shortcut icon" href="/mark.svg" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	
@@ -34,7 +34,7 @@
 	target="_blank" rel="me"
 	title="GitHub"><i class="bi bi-github"></i></a>
 </div>
-		<nav><a href="/">Home</a>
+		<nav class="gt-md"><a href="/">Home</a>
 <a href="/blog/">Blog</a>
 <a href="/projects/">Projects</a>
 <a href="/speaking/">Speaking</a>
@@ -42,6 +42,7 @@
 <a href="/press/">Press</a>
 <a href="/interviews/">Interviews</a>
 <a href="/about/">About</a></nav>
+		<a href="#nav" class="🍔 lt-md"><i class="bi bi-list"></i></a>
 	</div>
 	<div class="page-meta">
 		
@@ -103,7 +104,7 @@
 	title="GitHub"><i class="bi bi-github"></i></a>
 
 	</section>
-	<nav>
+	<nav id="nav">
 		<a href="/">Home</a>
 <a href="/blog/">Blog</a>
 <a href="/projects/">Projects</a>
