More social icon styling

--- a/index.html
+++ b/index.html
@@ -18,21 +18,36 @@
 			<img property="image" src="/mark.svg" alt="">
 			<span class="site-title" title="Life at the bleeding edge (of the Web)">Lea Verou</span>
 		</a>
-		<div class="social">
+		<div class="social gt-md">
 	<a class="twitter"
 	href="http://twitter.com/leaverou"
 	target="_blank" rel="me"
-	title="Twitter"><i class="bi bi-twitter"></i></a>
-
-	<a class="mastodon"
-	href="https://front-end.social/@leaverou"
-	target="_blank" rel="me"
-	title="Mastodon"><i class="bi bi-mastodon"></i></a>
+	aria-label="Twitter"><i class="bi bi-twitter"></i></a>
 
 	<a class="github"
 	href="https://github.com/leaverou"
 	target="_blank" rel="me"
-	title="GitHub"><i class="bi bi-github"></i></a>
+	aria-label="GitHub"><i class="bi bi-github"></i></a>
+
+	<a class="mastodon"
+	href="https://front-end.social/@leaverou"
+	target="_blank" rel="me"
+	aria-label="Mastodon"><i class="bi bi-mastodon"></i></a>
+
+	<a class="linkedin"
+	href="https://www.linkedin.com/in/leaverou/"
+	target="_blank" rel="me"
+	aria-label="LinkedIn"><i class="bi bi-linkedin"></i></a>
+
+	<a class="dribbble"
+	href="https://dribbble.com/leaverou"
+	target="_blank" rel="me"
+	aria-label="Dribbble"><i class="bi bi-dribbble"></i></a>
+
+	<a class="bluesky"
+	href="https://bsky.app/profile/lea.verou.me"
+	target="_blank" rel="me"
+	aria-label="BlueSky"><i class="bi bi-clouds-fill"></i></a>
 </div>
 		<nav class="gt-md"><a href="/">Home</a>
 <a href="/blog/">Blog</a>
@@ -91,20 +106,36 @@
 	<a class="twitter"
 	href="http://twitter.com/leaverou"
 	target="_blank" rel="me"
-	title="Twitter"><i class="bi bi-twitter"></i></a>
-
-	<a class="mastodon"
-	href="https://front-end.social/@leaverou"
-	target="_blank" rel="me"
-	title="Mastodon"><i class="bi bi-mastodon"></i></a>
+	aria-label="Twitter"><i class="bi bi-twitter"></i></a>
 
 	<a class="github"
 	href="https://github.com/leaverou"
 	target="_blank" rel="me"
-	title="GitHub"><i class="bi bi-github"></i></a>
+	aria-label="GitHub"><i class="bi bi-github"></i></a>
+
+	<a class="mastodon"
+	href="https://front-end.social/@leaverou"
+	target="_blank" rel="me"
+	aria-label="Mastodon"><i class="bi bi-mastodon"></i></a>
+
+	<a class="linkedin"
+	href="https://www.linkedin.com/in/leaverou/"
+	target="_blank" rel="me"
+	aria-label="LinkedIn"><i class="bi bi-linkedin"></i></a>
+
+	<a class="dribbble"
+	href="https://dribbble.com/leaverou"
+	target="_blank" rel="me"
+	aria-label="Dribbble"><i class="bi bi-dribbble"></i></a>
+
+	<a class="bluesky"
+	href="https://bsky.app/profile/lea.verou.me"
+	target="_blank" rel="me"
+	aria-label="BlueSky"><i class="bi bi-clouds-fill"></i></a>
 
 	</section>
 	<nav id="nav">
+		<h4>About me</h4>
 		<a href="/">Home</a>
 <a href="/blog/">Blog</a>
 <a href="/projects/">Projects</a>
