--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" vocab="https://schema.org/">
+<html lang="en" vocab="https://schema.org/" data-area="">
 <head>
 	<meta charset="UTF-8">
 	<title>Lea Verou</title>
