--- a/files/stateof/features/index.html
+++ b/files/stateof/features/index.html
@@ -25,6 +25,7 @@
 		</span>
 	</div>
 
+	<a href="" download="discussions.csv" id="download_csv">Download CSV</a>
 	<pre id="csv"></pre>
 </body>
 </html>
