--- a/files/stateof/mocks/sentiment/index.html
+++ b/files/stateof/mocks/sentiment/index.html
@@ -9,21 +9,10 @@
 </head>
 <body>
 
-<div class="wrapper" id="wrapper" :class="{
-	macros: selected_mockup.macros,
-	select: selected_mockup.select,
-	'in-answer': selected_mockup.in_answer,
-}" :style="`--selected-index: ${selected_index}`">
+<div class="wrapper" id="wrapper" :style="`--selected-index: ${selected_index}`">
 	<div class="survey-section">
 		<div class="section-contents">
 			<div class="section-questions" id="section-questions">
-				<div id="mockup-selector">
-					UI for followups:
-					<label v-for="(candidate, i) of ui.mockups">
-						<input type="radio" :value="i" name="mockup" v-model="mockup" :key="i">
-						{{ candidate.label }}
-					</label>
-				</div>
 				<div class="form-input" class="{'open-comment': question.open_comment}">
 					<div>
 						<div>
@@ -61,8 +50,8 @@
 																	<span>{{ option.icon }}</span>
 																	{{ option.label }}
 																</span>
-																<div class="comment-trigger-wrapper" v-if="selected_mockup.in_answer" v-show="question.answer == option.value">
-																	<button type="button"
+																<div class="comment-trigger-wrapper" v-show="question.answer == option.value">
+																	<button type="button" v-if="question.answer == option.value"
 																		:class="`comment-trigger comment-trigger-${ question.open_comment? '' : 'in' }active`"
 																		@click="question.open_comment = !question.open_comment"
 																		>
@@ -74,16 +63,15 @@
 																		<span class="visually-hidden">
 																			<span data-key="experience.leave_comment" class="i18n-message  t">Leave a Comment (optional)</span></span>
 																	</button>
-																	<span class="followups">
-																		<button class="followup"
+																	<span class="sentiments">
+																		<button v-for="(label, i) in option.sentiment"
+																		  class="sentiment"
 																		  :class="{
-																			selected: question.selected_followups.has(i),
-																			sentiment: i <= 1,
-																			issue: i > 1,
+																			selected: question.selected_sentiment === i,
+																			positive: i === 0,
+																			negative: i === 1,
 																		  }"
-																		  v-show="i <= 1 || question.selected_followups.has(1) && !selected_mockup.in_answer"
-																		  v-for="(label, i) in option.sentiment"
-																		  @click="pick_followup(label, i, option)">{{ label }}</button>
+																		  @click="pick_sentiment(label, i, option)">{{ label }}</button>
 																	</span>
 																</div>
 															</span>
@@ -94,63 +82,15 @@
 										</div>
 									</div>
 								</div>
-								<div class="comment-trigger-wrapper" v-if="!selected_mockup.in_answer">
-									<button
-										:class="`comment-trigger comment-trigger-${ question.open_comment? '' : 'in' }active`"
-										type="button" aria-describedby="popover-basic" aria-label="Leave a Comment (optional)" title="Leave a Comment (optional)"
-										@click="question.open_comment = !question.open_comment"
-										>
-										<svg class="icon-comment" width="24" height="24" fill="none" stroke-width="1.5" color="white" viewBox="0 0 24 24">
-											<path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
-												d="M12 22c5.523 0 10-4.477 10-10S17.523 2 12 2 2 6.477 2 12c0 1.821.487 3.53 1.338 5L2.5 21.5l4.5-.838A9.955 9.955 0 0012 22z">
-											</path>
-										</svg>
-										<span class="visually-hidden">
-											<span data-key="experience.leave_comment" class="i18n-message  t">Leave a Comment (optional)</span></span>
-									</button>
-									<span class="followups" v-if="!selected_mockup.in_answer">
-										<button
-										  class="followup"
-										  :class="{
-											selected: question.selected_followups.has(i),
-											sentiment: i <= 1,
-											issue: i > 1,
-										  }"
-										  v-show="i <= 1 || question.selected_followups.has(1) && !selected_mockup.in_answer"
-										  v-for="(label, i) in followups"
-										  @click="pick_followup(label, i)">{{ label }}</button>
-									</span>
-								</div>
 								<div class="comment-input" v-if="question.open_comment">
-									<template v-if="!mockup || !question.answer">
-										<h5 class="comment-input-heading">
-											<span data-key="experience.leave_comment" class="i18n-message  t">Leave a Comment (optional)</span>
-										</h5>
-										<p class="comment-input-subheading">
-											{{ question.answer ? `You answered “${ selected_option?.icon } ${ selected_option?.label }”. Tell us more about your choice:` : 'You didn’t pick any response. Tell us why:' }}
-										</p>
-									</template>
-									<template v-else-if="selected_mockup.macros">
-										<p class="comment-input-prompt">More details (optional)</p>
-									</template>
-									<template v-if="selected_mockup.in_answer">
-										<p class="comment-input-prompt">
-											<template v-if="selected_sentiment">
-												{{selected_sentiment}} because…
-											</template>
-											<template v-else>
-												You can optionally add more context…
-											</template>
-											<span class="issues">
-												<button class="issue followup"
-												:class="{ selected: question.selected_followups.has(i + 2), }"
-												v-show="question.selected_followups.has(1)"
-												v-for="(label, i) in selected_option.issues"
-												@click="pick_followup(label, i + 2)">{{ label }}</button>
-											</span>
-
-										</p>
-									</template>
+									<p class="comment-input-prompt">
+										<template v-if="selected_sentiment_label">
+											{{ selected_sentiment_label }} because…
+										</template>
+										<template v-else>
+											You can optionally add more context…
+										</template>
+									</p>
 									<textarea id="css2023__features__aspect_ratio__experience" class="form-control" ref="comment_area" placeholder="Additional context"></textarea>
 								</div>
 							</div>
