--- a/files/stateof/mocks/sentiment/index.html
+++ b/files/stateof/mocks/sentiment/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Sentiment prototype</title>
 	<link rel="stylesheet" href="style.css">
+	<link rel="icon" href='data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"><text y=".9em" font-size="90">❤️</text></svg>'>
 	<script type="module" src="index.js"></script>
 </head>
 <body>
