Add max custom count, move label to function

--- a/files/stateof/mocks/custom-options/index.html
+++ b/files/stateof/mocks/custom-options/index.html
@@ -97,7 +97,7 @@
 																	class="form-control custom-option"
 																	:id="`css2023__features__${ question.id }__experience_custom.${ index }`"
 																	:name="option.value ? `css2023__features__${ question.id }__experience_custom` : ''"
-																	placeholder="Your own answer…" aria-label="Custom Option"
+																	:placeholder="option.get_label(index)" :aria-label="option.get_label(index)"
 																	@focus="option.active = true;" @blur="option.active = false;"
 																	v-focus="option.active"
 																	@input="question.custom_option_changed?.(index)"
@@ -108,7 +108,7 @@
 																	class="form-control custom-option"
 																	:id="`css2023__features__${ question.id }__experience_custom.${ index }`"
 																	:name="option.value ? `css2023__features__${ question.id }__experience_custom` : ''"
-																	:placeholder="`Item #${ index + 1 }`" :aria-label="`Item #${ index + 1 }`"
+																	:placeholder="option.get_label(index)" :aria-label="option.get_label(index)"
 																	@focus="option.active = true" @blur="option.active = false"
 																	v-focus="option.active"
 																	@input="question.custom_option_changed?.(index)"
